syntax = "proto3";

message RichTextDescription {
    string format = 1;
}
message CheckboxDescription {
    bool is_selected = 1;
}
message DateDescription {
    DateFormat date_format = 1;
    TimeFormat time_format = 2;
}
message SingleSelectDescription {
    repeated SelectOption options = 1;
    bool disable_color = 2;
}
message MultiSelectDescription {
    repeated SelectOption options = 1;
    bool disable_color = 2;
}
message SelectOption {
    string id = 1;
    string name = 2;
    string color = 3;
}
message NumberDescription {
    MoneySymbol money = 1;
    uint32 scale = 2;
    string symbol = 3;
    bool sign_positive = 4;
    string name = 5;
}
enum DateFormat {
    Local = 0;
    US = 1;
    ISO = 2;
    Friendly = 3;
}
enum TimeFormat {
    TwelveHour = 0;
    TwentyFourHour = 1;
}
enum MoneySymbol {
    CNY = 0;
    EUR = 1;
    USD = 2;
}
